# bevy-car

./: .gitignore  Cargo.toml  justfile
.cargo/: config.toml
.github/: bevy.md  copilot-instructions.md
.github/workflows/: deploy.yml
assets/models/converted/: streetlight_single.glb
public/: index.html
scripts/: build-wasm.sh
src/: main.rs  parking_ai.rs
