[package]
name = "bevy-car"
version = "0.1.10"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["3d"] }
bevy_rapier3d = "0.33.0"
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")']
runner = "wasm-server-runner"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 3
